--- a/tick/telegraf.conf
+++ b/tick/telegraf.conf
@@ -109,7 +109,7 @@
   ## urls will be written to each interval.
   # urls = ["unix:///var/run/influxdb.sock"]
   # urls = ["udp://127.0.0.1:8089"]
-  # urls = ["http://127.0.0.1:8086"]
+  urls = ["http://influxdb:8086"]
 
   ## The target database for metrics; will be created as needed.
   ## For UDP url endpoint database needs to be configured on server side.
@@ -616,18 +616,38 @@
   ##
   ## See https://github.com/gobwas/glob for more examples
   ##
-  files = ["/var/mymetrics.out"]
+  files = ["/var/tmp/metrics.json"]
   ## Read file from beginning.
   from_beginning = false
   ## Whether file is a named pipe
   pipe = false
 
   ## Method used to watch for file updates.  Can be either "inotify" or "poll".
-  # watch_method = "inotify"
+  watch_method = "inotify"
 
   ## Data format to consume.
   ## Each data format has its own unique set of configuration options, read
   ## more about them here:
   ## https://github.com/influxdata/telegraf/blob/master/docs/DATA_FORMATS_INPUT.md
-  data_format = "influx"
+  data_format = "json"
+
+  ## Override the base name of the measurement. (Default is the name of the input).
+  name_override = "xiaomi-mijia-bluetooth-sensor"
+
+  ## Time key is the key containing the time that should be used to create the
+  ## metric.
+  json_time_key = "time"
+
+  ## Time format is the time layout that should be used to interpret the json_time_key.
+  ## The time must be `unix`, `unix_ms`, `unix_us`, `unix_ns`, or a time in the
+  ## "reference time".  To define a different format, arrange the values fro
+  ## the "reference time" in the example to match the format you will be
+  ## using.  For more information on the "reference time", visit
+  ## https://golang.org/pkg/time/#Time.Format
+  ##   ex: json_time_format = "Mon Jan 2 15:04:05 -0700 MST 2006"
+  ##       json_time_format = "2006-01-02T15:04:05Z07:00"
+  ##       json_time_format = "01/02/2006 15:04:05"
+  ##       json_time_format = "unix"
+  ##       json_time_format = "unix_ms"
+  json_time_format = "2006-01-02T15:04:05.000Z"
 
