resolves #1 add mac field as a key so that it could be possible to understand which sensor send what

--- a/tick/telegraf.conf
+++ b/tick/telegraf.conf
@@ -651,3 +651,6 @@
   ##       json_time_format = "unix_ms"
   json_time_format = "2006-01-02T15:04:05.000Z"
 
+  ## Tag keys is an array of keys that should be added as tags.  Matching keys
+  ## are no longer saved as fields.
+  tag_keys = ["mac"]
