--- a/tick/telegraf.conf
+++ b/tick/telegraf.conf
@@ -606,24 +606,9 @@
 
 
 # Stream a log file, like the tail -f command
-[[inputs.tail]]
-  ## files to tail.
-  ## These accept standard unix glob matching rules, but with the addition of
-  ## ** as a "super asterisk". ie:
-  ##   "/var/log/**.log"  -> recursively find all .log files in /var/log
-  ##   "/var/log/*/*.log" -> find all .log files with a parent dir in /var/log
-  ##   "/var/log/apache.log" -> just tail the apache log file
-  ##
-  ## See https://github.com/gobwas/glob for more examples
-  ##
-  files = ["/var/tmp/metrics.json"]
-  ## Read file from beginning.
-  from_beginning = false
-  ## Whether file is a named pipe
-  pipe = false
-
-  ## Method used to watch for file updates.  Can be either "inotify" or "poll".
-  watch_method = "inotify"
+[[inputs.socket_listener]]
+  ## Address and port to host TCP listener on
+  service_address = "tcp://:8094"
 
   ## Data format to consume.
   ## Each data format has its own unique set of configuration options, read
@@ -649,7 +634,7 @@
   ##       json_time_format = "01/02/2006 15:04:05"
   ##       json_time_format = "unix"
   ##       json_time_format = "unix_ms"
-  json_time_format = "2006-01-02T15:04:05.000Z"
+  json_time_format = "2006-01-02T15:04:05Z"
 
   ## Tag keys is an array of keys that should be added as tags.  Matching keys
   ## are no longer saved as fields.
